<resources>
    <string name="app_name">Visit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_signup">Sign up</string>
    <string name="welcome_already_signed_in">Have been here before?</string>

    <string name="visitorInfo_name">Name</string>
    <string name="visitorInfo_company">Company</string>
    <string name="visitorInfo_phone">Phone number</string>
    <string name="visitorInfo_next">Next</string>

    <string name="nda_agreement_text">This is the agreement that you have to agree with.</string>
    <string name="nda_agree">Yes I agree.</string>

    <string name="idScan_btn_capture">Capture</string>

    <string name="visiteeInfo_visitee_name">Name</string>
    <string name="visiteeInfo_purpose">Purpose of visit</string>
    <string name="visiteeInfo_hours">Time for stay</string>
    <string name="visiteeInfo_button_next">Next</string>
    <string name="visiteeInfo_button_previous">Previous</string>

    <string name="print_message">Please collect your printed ID.</string>
    <string name="pref_category_stage_sel">Select stages</string>
    <string name="pref_stage1">Stage 1</string>
    <string name="pref_stage2">Stage 2</string>
    <string name="pref_stage3">Stage 3</string>
    <string name="pref_stage4">Stage 4</string>
    <string name="pref_stage5">Stage 5</string>

    <string name="pref_key_stage1">"pref_key_stage1"</string>
    <string name="pref_key_stage2">"pref_key_stage2"</string>
    <string name="pref_key_stage3">"pref_key_stage3"</string>
    <string name="pref_key_stage4">"pref_key_stage4"</string>
    <string name="pref_key_stage5">"pref_key_stage5"</string>

    <string name="intent_key_coupon">coupon</string>

    <integer name="VisitorInfoFragment">1</integer>
    <integer name="FaceIdFragment">2</integer>
    <integer name="NonDisclosureFragment">3</integer>


    <string name="title_activity_settings">SettingsActivity</string>


    <string name="app_title">ePOS2 Printer</string>
    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="btn_samplereceipt">Sample Receipt</string>
    <string name="btn_samplecoupon">Sample Coupon</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t60">TM-T60 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>

    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>


    <string name="faceId_storage_key">faceId</string>
    <string name="REMOTE_STAGE1_KEY">stage1</string>
    <string name="REMOTE_STAGE2_KEY">stage2</string>
    <string name="REMOTE_STAGE3_KEY">stage3</string>
    <string name="REMOTE_STAGE4_KEY">stage4</string>
    <string name="REMOTE_STAGE5_KEY">stage5</string>
    <string name="CONFIGURATION_PREFERENCE_KEY">ConfigPreference</string>
    <string name="REMOTE_CONFIG_PREFERENCE">remote_config_preference</string>
    <string name="logo_transition_name">logo_transition_name</string>


    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="TEXT_FROM_SPEECH">text_output</string>
    <string name="speech_dialog_title">type</string>
    <string name="PREF_FILE_MASTERWORKFLOW">PREF_FILE_MASTERWORKFLOW</string>
    <string name="PREF_KEY_MASTERWORKFLOW">PREF_KEY_MASTERWORKFLOW</string>
    <string name="INTENT_WORKFLOW_SELECT_KEY">INTENT_WORKFLOW_SELECT_KEY</string>

    <string name="CLASS_TEXTINPUT">CLASS_TEXTINPUT</string>
    <string name="CLASS_SURVEYINPUT">CLASS_SURVEYINPUT</string>
    <string name="CLASS_THANKYOU">CLASS_THANKYOU</string>
    <string name="CLASS_RATING">CLASS_RATING</string>
    <string name="CLASS_CAMERA">CLASS_CAMERA</string>
    <string name="CLASS_SUGGESTION">CLASS_SUGGESTION</string>

    <string name="collection_ref_institutes">institutes</string>
    <string name="collection_ref_workflows">workflows</string>
    <string name="collection_ref_visitors">visitors</string>
    <string name="class_type_firebase_pref">wipe</string>
    <string name="collection_ref_photos">photos</string>

    <string name="KEY_WORKFLOW_PREF_SIGNIN_TIME">signInTime</string>
    <string name="KEY_WORKFLOW_PREF_IS_SIGNEDOUT">isSignedOut</string>
    <string name="KEY_WORKFLOW_DATA_IS_WORKFLOW_SIGNOUT">isWorkflowForSignOut</string>
    <string name="KEY_WORKFLOW_PREF_SIGNOUT_TIME">signOutTime</string>

    <string name="text_next">NEXT</string>
    <string name="text_skip">SKIP</string>
</resources>
