<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sonu_pc.visit.fragments.VisiteeInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editText_stay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editText_visit_purpose"
        app:layout_constraintRight_toRightOf="@+id/editText_visit_purpose"
        app:layout_constraintTop_toBottomOf="@+id/editText_visit_purpose"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText_visitee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintVertical_bias="0.24000001" />

    <EditText
        android:id="@+id/editText_visit_purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/editText_visitee_name"
        app:layout_constraintRight_toRightOf="@+id/editText_visitee_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_visitee_name" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/visiteeInfo_button_next"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_previous"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/visiteeInfo_button_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visiteeInfo_visitee_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_visitee_name"
        app:layout_constraintRight_toLeftOf="@+id/editText_visitee_name"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visiteeInfo_purpose"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView6"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_visit_purpose" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visiteeInfo_hours"
        android:layout_marginRight="1dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_stay_time" />
</android.support.constraint.ConstraintLayout>
